# sandb

./: .gitignore  .pre-commit-config.yaml  README.md  Readme.md  lsm_tree.py  mypy.ini  pyproject.toml  requirements.txt  simple_db.py  simple_db.txt
.github/workflows/: test_package.yml
db/: config.py  hash_index.py  lsm_tree.py  simple_db.py
diagrams/: lsm_tree.excalidraw
src/sandb/: config.py
src/sandb/docs/diagrams/: lsm_tree.excalidraw
src/sandb/docs/docs/: talkscript.md
src/sandb/indexes/: abc.py  hash_index.py  lsm_tree.py  simple_db.py
src/sandb/tables/: metadata.py  table.py
tests/: conftest.py  test_lsm_tree.py
tests/indexes/: test_lsm_tree.py
tests/sandb/indexes/: test_lsm_tree.py
tests/sandb/tables/: test_tables.py
tmp7n1obe3f/: segment_1.txt
tmprnr0qdrm/: segment_0.txt
