[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sandb"
version = "0.0.1"

requires-python = ">= 3.12"
maintainers = [
  {name = "Max Sandman", email = "m.sandman@hotmail.co.uk"}
]
description = "Implementing a Database from scratch"
dependencies = [
    "sortedcontainers>=2.4.0",
    "num2words>=0.5.13",
    "numpy>=2.0.1",
]

[project.optional-dependencies]
# development dependency groups
dev = [
    "pre-commit>=3.8.0",
    "pytest>=8.3.2",
    #"coverage>=7.6.1",
    "pytest-cov-5.0.0",
]